--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tiptap/core": "^2.11.2",
     "@tiptap/extension-highlight": "^2.10.4",
+    "@tiptap/extension-text-align": "^2.11.2",
+    "@tiptap/extension-text-style": "^2.11.2",
     "@tiptap/pm": "^2.10.4",
     "@tiptap/react": "^2.10.4",
-    "@tiptap/starter-kit": "^2.10.4",
+    "@tiptap/starter-kit": "^2.11.2",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
